--- a/bio.html
+++ b/bio.html
@@ -29,9 +29,7 @@
         <div class="bio-landing-container">
             <h1 class="bio-landing-title">A Journey of Growth and Innovation</h1>
             <div class="bio-landing-photo">
-                <div class="photo-placeholder">
-                    <span>Your Photo</span>
-                </div>
+                <img src="images/projects/2025-08-09_RVP_Rosenfield_Family-63.jpg" alt="Amedeo Rosenfield" class="bio-photo">
             </div>
             
             <!-- Scroll indicator -->
